--- a/adil.html
+++ b/adil.html
@@ -1,323 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Demo Email Template</title>
-<style type="text/css">
-	@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap');
-	body {
-		margin: 0;
-		width: clamp(100px, 100%, 1900px);
-	}
-	table {
-		border-spacing: 0;
-		width: 100%;
-	}
-	td {
-		padding: 0;
-	}
-	img {
-		border: 0;
-	}
-	.wrapper {
-		width: 100%;
-		table-layout: fixed;
-		background-color: rgb(180, 183, 209);
-		padding-bottom: 60px;
-	}
-	.main {
-		width: 100%;
-		max-width: 600px;
-		padding: 0;
-		background-color: rgb(210, 210, 211);
-		font-family: sans-serif;
-		color: #2e2c2c;
-		box-shadow: 0 0 25px rgba(0, 0, 0, .5);
-		text-align: center;
-	}
-	.logo {
-		padding: 0 0 13px 69px;
-	}
-	.social-media {
-		padding: 10px 90px 10px;
-	}
-	.social {
-		width: 40px;
-		padding: 3px;		
-	}
-	.two-column {
-		font-size: 0;
-		text-align: center;
-	}
-	.column {
-		width: 100%;
-		max-width: 300px;
-		display: inline-block;
-		vertical-align: middle;
-	}
-	h3 {
-		font-family: 'Roboto condensed', sans-serif;
-		font-size: 27px;
-	}
-	button {
-		background-color: #2e2c2c;
-		text-decoration: none;
-		color: rgb(255, 255, 255);
-		padding: 12px 22px;
-		border: none;
-		border-radius: 7px;
-		font-weight: bold;
-	}
-	h4 {
-		font-family: 'Roboto condensed', sans-serif;
-		font-size: 19px;
-	}
-	.three-column {
-		font-size: 0;
-		padding: 35px 0;
-	}
-	.three-column .column {
-		width: 100%;
-		max-width: 200px;
-		display: inline-block;
-		vertical-align: top;
-	}
-	.three-column .padding {
-		padding: 25px;
-	}
-	.three-column .content {
-		font-size: 15px;
-		line-height: 18px;
-	}
-	.two-column .last{
-		text-align: left;
-		padding: 35px;
-	}
-	.two-column .padding{
-		padding: 0px 0px 20px;
-	}
-	.two-column .content{
-		font-size: 14px;
-		line-height: 20px;
-	}
-</style>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 </head>
 <body>
-	<center class="wrapper">
-		<table class="main" width="100%">
-
-			<tr>
-				<td height="8" style="background-color: rgb(34, 34, 34);"></td>
-			</tr>
-			
-			<tr>
-				<td style="padding: 14px 0 4px;">
-					<table width="100%">
-
-						<tr>
-							<td class="two-column">
-
-								<table class="column">
-									<tr>
-										<td class="logo">
-											<a href="#"><img src="https://i.ibb.co/MGr3Tzt/logo1-o.png" alt="Food Rush Logo" width="160" title="Food Rush"></a>
-										</td>
-									</tr>
-								</table>
-
-								<table class="column">
-									<tr>
-										<td class="social-media">
-											<a href="#"><img src="https://i.ibb.co/ZMy4BHY/fb-bw.webp" alt="facebook" class="social"></a>
-											<a href="#"><img src="https://i.ibb.co/kgdBryG/in-bw.webp" alt="instagram" class="social"></a>
-											<a href="#"><img src="https://i.ibb.co/sgysFq7/tw-bw.webp" alt="twitter" class="social"></a>
-											<a href="#"><img src="https://i.ibb.co/qrcT3P8/yt-bw.webp" alt="youtube" class="social"></a>
-										</td>
-									</tr>
-								</table>
-							</td>
-						</tr>
-						
-						<tr>
-							<td>
-								<a href="#"><img src="https://i.ibb.co/nDBmYh5/banner1.png" alt="" style="width: 100%; max-width: 600px;"></a>
-							</td>
-						</tr>
-
-						<tr>
-							<td style="padding: 4px 15px 14px;">
-								<table width=""100%>
-
-									<tr>
-										<td>
-											<h3>FOOD RUSH</h3>
-											<p style="line-height: 20px; font-size: 16px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit explicabo quod error itaque eum quia aliquid molestiae consequuntur numquam. Excepturi, consequuntur perferendis. Dignissimos dolorem corporis aliquam incidunt iste eaque impedit!</p>
-											<form action="#" target="_blank">
-											<button>Order Now</button>
-											</form>
-										</td>
-									</tr>
-								</table>
-							</td>
-						</tr>
-
-						<tr>
-							<td height="3" style="background-color: rgb(34, 34, 34);"></td>
-						</tr>
-
-						<tr>
-							<td>
-								<table width="100%">
-									
-									<tr>
-										<td class="three-column">
-
-											<table class="column">
-												<tr>
-													<td class="padding">
-
-														<table class="content">
-															<tr>
-																<td>
-																	<a href="#"><img src="https://i.ibb.co/DW940Vn/salad.png" width="150" alt=""></a>
-																</td>
-															</tr>
-															<tr>
-																<td style="padding: 5px 0 10px;">
-																	<h4>SALADS & STARTERS</h4>
-																	<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque aperiam enim inventore, labore totam consectetur!</p>
-																</td>
-															</tr>
-														</table>
-													</td>
-												</tr>
-											</table>
-
-											<table class="column">
-												<tr>
-													<td class="padding">
-
-														<table class="content">
-															<tr>
-																<td>
-																	<a href="#"><img src="https://i.ibb.co/dBYmrNw/trad.png" width="150" alt=""></a>
-																</td>
-															</tr>
-															<tr>
-																<td style="padding: 5px 0 10px;">
-																	<h4>TRADITIONAL FOODS</h4>
-																	<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque aperiam enim inventore, labore totam consectetur!</p>
-																</td>
-															</tr>
-														</table>
-													</td>
-												</tr>
-											</table>
-
-											<table class="column">
-												<tr>
-													<td class="padding">
-
-														<table class="content">
-															<tr>
-																<td>
-																	<a href="#"><img src="https://i.ibb.co/Xxv8rvn/dessert.png" width="150" alt=""></a>
-																</td>
-															</tr>
-															<tr>
-																<td style="padding: 5px 0 10px;">
-																	<h4>DESSERTS</h4>
-																	<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque aperiam enim inventore, labore totam consectetur!</p>
-																</td>
-															</tr>
-														</table>
-													</td>
-												</tr>
-											</table>
-										</td>
-									</tr>
-
-									<tr>
-										<td height="3" style="background-color: rgb(34, 34, 34);"></td>
-									</tr>
-
-									<tr>
-										<td>
-											<table width="100%">
-
-											<tr>
-												<td class="two-column last">
-
-													<table class="column">
-														<td class="padding">
-															<table class="content">
-																<tr>
-																	<td>
-																		<a href="#"><img src="https://i.ibb.co/Swnt8B2/map.png" width="300" alt=""></a>
-																	</td>
-																</tr>
-															</table>	
-														</td>
-													</table>
-
-													<table class="column">
-													 <tr>
-														<td class="padding">
-															<table class="content">
-																<tr>
-																	<td>
-																		<h4>Visit Our New Outlet</h4>
-																		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores doloremque quidem enim exercitationem autem aut.</p>
-																		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, commodi?</p>
-																		<form action="#" target="_blank">
-																			<button>For More Information</button>
-																			</form>
-																	</td>
-																</tr>
-															</table>	
-														</td>
-													  </tr>
-													</table>
-
-												</td>
-											</tr>	
-
-											</table>
-										</td>
-									</tr>
-									   <tr>
-										<td style="background-color:#2e2c2c; color: #fff;">
-											<table width="100%">
-
-												<tr>
-													<td style="padding: 45px 20px;">
-														<a href="#"><img src="https://i.ibb.co/FhbkhDc/logo-white.png" width="260"alt=""></a>
-														<p style="padding: 3px;">Food Rush Restaurant</p>
-														<p style="padding: 3px;">123 Street Road, City, State 55555</p>
-														<a href="#"><img src="https://i.ibb.co/ZMy4BHY/fb-bw.webp" alt="facebook" class="social"></a>
-														<a href="#"><img src="https://i.ibb.co/kgdBryG/in-bw.webp" alt="instagram" class="social"></a>
-														<a href="#"><img src="https://i.ibb.co/sgysFq7/tw-bw.webp" alt="twitter" class="social"></a>
-														<a href="#"><img src="https://i.ibb.co/qrcT3P8/yt-bw.webp" alt="youtube" class="social"></a>
-														<p style="font-size: 12px; opacity: 0.5; padding-top:5px;">&copy; 2022 Foodrush.Inc</p>
-													</td>
-												</tr>
-
-												<tr>
-													<td height="10" style="background-color: rgb(0, 0, 0);"></td>
-												</tr>
-											</table>
-										</td>
-									   </tr>
-								</table>
-							</td>
-						</tr>
-
-					</table>
-				</td>
-			</tr>
-		</table>
-	</center>
+	<p>Hello World!</p>
+	<p>How Are You?</p>
 </body>
 </html>
